# pastepile

./: LICENSE  package.json  pnpm-lock.yaml
src/: App.jsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: ev.rs  main.rs
