[package]
name = "tauri-app"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tauri = { version = "1.3", features = ["clipboard-all", "shell-open", "window-set-always-on-top"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
device_query = "1.1.3"
lazy_static = "=1.4"
once_cell = "=1.17"
tokio = { version = "1", features = ["full"] }


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
